[gd_scene load_steps=26 format=2]

[ext_resource path="res://Juego/Estructuras Espaciales/AreaAtraccion.tscn" type="PackedScene" id=1]
[ext_resource path="res://Juego/Enemigos/baseEnemiga6.png" type="Texture" id=2]
[ext_resource path="res://Juego/Enemigos/baseEnemiga7.png" type="Texture" id=3]
[ext_resource path="res://Juego/Enemigos/baseEnemiga4.png" type="Texture" id=4]
[ext_resource path="res://Juego/Enemigos/baseEnemiga3.png" type="Texture" id=5]
[ext_resource path="res://Juego/Enemigos/baseEnemiga1.png" type="Texture" id=6]
[ext_resource path="res://Juego/Enemigos/baseEnemiga2.png" type="Texture" id=7]
[ext_resource path="res://Juego/Enemigos/BaseEnemiga.gd" type="Script" id=8]
[ext_resource path="res://Juego/Enemigos/AreaColision.gd" type="Script" id=9]
[ext_resource path="res://Juego/Enemigos/EnemigoOrbital.tscn" type="PackedScene" id=10]
[ext_resource path="res://Juego/Enemigos/PosicionesSpawn.gd" type="Script" id=11]
[ext_resource path="res://Juego/Enemigos/OrbitalesRuta.gd" type="Script" id=12]
[ext_resource path="res://Juego/UI/BarraSalud/BarraSalud.tscn" type="PackedScene" id=13]

[sub_resource type="RectangleShape2D" id=1]
extents = Vector2( 23.3028, 272.465 )

[sub_resource type="CapsuleShape2D" id=2]
radius = 43.0414
height = 40.7427

[sub_resource type="CapsuleShape2D" id=3]
radius = 21.0399
height = 34.5216

[sub_resource type="CapsuleShape2D" id=4]
radius = 18.4789
height = 35.6774

[sub_resource type="CapsuleShape2D" id=5]
radius = 18.9838
height = 85.7938

[sub_resource type="RectangleShape2D" id=6]
extents = Vector2( 95.4397, 22.7803 )

[sub_resource type="Animation" id=7]
tracks/0/type = "value"
tracks/0/path = NodePath("Sprites:rotation_degrees")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"update": 0,
"values": [ 0.0 ]
}

[sub_resource type="Animation" id=8]
length = 1.5
tracks/0/type = "value"
tracks/0/path = NodePath("AreaColisionFisica:rotation_degrees")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0, 1.5 ),
"transitions": PoolRealArray( 1, 1 ),
"update": 0,
"values": [ 360.0, 0.0 ]
}
tracks/1/type = "value"
tracks/1/path = NodePath("Sprites:rotation_degrees")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/keys = {
"times": PoolRealArray( 0, 1.5 ),
"transitions": PoolRealArray( 1, 1 ),
"update": 0,
"values": [ 360.0, 0.0 ]
}

[sub_resource type="Animation" id=9]
length = 4.0
tracks/0/type = "value"
tracks/0/path = NodePath("AreaColisionFisica:rotation_degrees")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0, 4 ),
"transitions": PoolRealArray( 1, 1 ),
"update": 0,
"values": [ 0.0, 360.0 ]
}
tracks/1/type = "value"
tracks/1/path = NodePath("Sprites:rotation_degrees")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/keys = {
"times": PoolRealArray( 0, 4 ),
"transitions": PoolRealArray( 1, 1 ),
"update": 0,
"values": [ 0.0, 360.0 ]
}

[sub_resource type="Animation" id=10]
resource_name = "rotacionInterrumpida"
length = 2.75
step = 0.05
tracks/0/type = "value"
tracks/0/path = NodePath("AreaColisionFisica:rotation_degrees")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0, 2, 2.75 ),
"transitions": PoolRealArray( 1, 1, 1 ),
"update": 0,
"values": [ 0.0, 180.0, 0.0 ]
}
tracks/1/type = "value"
tracks/1/path = NodePath("Sprites:rotation_degrees")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/keys = {
"times": PoolRealArray( 0, 2, 2.75 ),
"transitions": PoolRealArray( 1, 1, 1 ),
"update": 0,
"values": [ 0.0, 180.0, 0.0 ]
}

[sub_resource type="Curve2D" id=11]
_data = {
"points": PoolVector2Array( 3.7755, 26.4285, -3.7755, -26.4285, -890.096, -2.87073, -135.918, 151.02, 135.918, -151.02, -723.695, -430.54, -154.795, 83.0609, 154.795, -83.0609, -346.146, -679.723, -222.754, 18.8775, 222.754, -18.8775, 1.71973, -885.865, -86.8364, -101.938, 86.8364, 101.938, 436.229, -760.007, -98.1629, -200.101, 98.1629, 200.101, 593.953, -370.132, -30.204, -124.591, 30.204, 124.591, 867.741, -4.85986, 109.489, -143.469, -109.489, 143.469, 741.883, 429.649, 169.897, -56.6325, -169.897, 56.6325, 326.277, 651.547, 173.673, -52.857, -173.673, 52.857, -6.71362, 872.667, 117.04, 75.5099, -117.04, -75.5099, -435.323, 758.482, 90.6119, 162.346, -90.6119, -162.346, -651.661, 385.21, 16.026, 277.449, -16.026, -277.449, -890.096, -2.87073 )
}

[sub_resource type="StyleBoxFlat" id=12]
bg_color = Color( 0.745098, 0.00784314, 0.94902, 1 )
border_width_left = 1
border_width_top = 1
border_width_right = 1
border_width_bottom = 1
border_color = Color( 0.0156863, 0.156863, 0.176471, 1 )

[node name="BaseEnemiga" type="Node2D" groups=[
"minimapa",
]]
z_index = 1
z_as_relative = false
script = ExtResource( 8 )
baseEnemigaHitpoints = 50.0
orbital = ExtResource( 10 )
numeroOrbitales = 12
intervaloSpawn = 1.125

[node name="Sprites" type="Node2D" parent="."]

[node name="Sprite" type="Sprite" parent="Sprites"]
position = Vector2( 4, 82 )
rotation = 3.14159
z_index = 1
texture = ExtResource( 6 )

[node name="Sprite2" type="Sprite" parent="Sprites"]
position = Vector2( 0, -174.653 )
texture = ExtResource( 7 )

[node name="Sprite3" type="Sprite" parent="Sprites"]
position = Vector2( -173.497, 179.544 )
texture = ExtResource( 5 )

[node name="Sprite4" type="Sprite" parent="Sprites"]
position = Vector2( 74.5286, -89.5493 )
rotation = 3.14159
z_index = 1
texture = ExtResource( 4 )

[node name="Sprite5" type="Sprite" parent="Sprites"]
position = Vector2( 9.22395, 171.062 )
scale = Vector2( 0.25, 0.25 )
z_index = 2
texture = ExtResource( 2 )

[node name="Sprite8" type="Sprite" parent="Sprites"]
position = Vector2( -0.184982, -97.7751 )
scale = Vector2( 0.25, 0.25 )
z_index = 2
texture = ExtResource( 2 )

[node name="Sprite6" type="Sprite" parent="Sprites"]
position = Vector2( -34.1148, -89.187 )
texture = ExtResource( 3 )

[node name="Sprite9" type="Sprite" parent="Sprites"]
position = Vector2( 33.8852, -89.187 )
texture = ExtResource( 3 )

[node name="Sprite7" type="Sprite" parent="Sprites"]
position = Vector2( -74.0472, -88.9547 )
texture = ExtResource( 4 )

[node name="AreaColisionFisica" type="Area2D" parent="."]
rotation = 6.28319
z_as_relative = false
priority = 2.0
collision_layer = 32
collision_mask = 11
script = ExtResource( 9 )

[node name="CollisionShape2D" type="CollisionShape2D" parent="AreaColisionFisica"]
position = Vector2( 0, 10 )
shape = SubResource( 1 )

[node name="CollisionShape2D2" type="CollisionShape2D" parent="AreaColisionFisica"]
position = Vector2( 0, -306.201 )
rotation = 1.5708
shape = SubResource( 2 )

[node name="CollisionShape2D3" type="CollisionShape2D" parent="AreaColisionFisica"]
position = Vector2( 61.853, -89.6 )
rotation = 1.5708
scale = Vector2( 1.03451, 1 )
shape = SubResource( 3 )

[node name="CollisionShape2D4" type="CollisionShape2D" parent="AreaColisionFisica"]
position = Vector2( -62.7899, -88.8931 )
rotation = 1.5708
scale = Vector2( 1.16, 1.07692 )
shape = SubResource( 4 )

[node name="CollisionShape2D5" type="CollisionShape2D" parent="AreaColisionFisica"]
position = Vector2( 85.7937, 180.799 )
rotation = 1.5708
scale = Vector2( 1.24, 1 )
shape = SubResource( 5 )

[node name="CollisionShape2D6" type="CollisionShape2D" parent="AreaColisionFisica"]
position = Vector2( -119.229, 180.098 )
shape = SubResource( 6 )

[node name="AreaAtraccion" parent="." instance=ExtResource( 1 )]

[node name="ImpactoSFX" type="AudioStreamPlayer2D" parent="."]

[node name="AnimationPlayer" type="AnimationPlayer" parent="."]
anims/default = SubResource( 7 )
anims/rotacionAntihorario = SubResource( 8 )
anims/rotacionHorario = SubResource( 9 )
anims/rotacionInterrumpida = SubResource( 10 )

[node name="VisibilityNotifier2D" type="VisibilityNotifier2D" parent="."]

[node name="PosicionesSpawn" type="Node2D" parent="."]
script = ExtResource( 11 )

[node name="Norte" type="Position2D" parent="PosicionesSpawn"]
position = Vector2( 0, -500 )

[node name="Sur" type="Position2D" parent="PosicionesSpawn"]
position = Vector2( 0, 500 )

[node name="Oeste" type="Position2D" parent="PosicionesSpawn"]
position = Vector2( -500, 0 )

[node name="Este" type="Position2D" parent="PosicionesSpawn"]
position = Vector2( 500, 0 )

[node name="OrbitalesRuta" type="Path2D" parent="."]
scale = Vector2( 0.75, 0.75 )
curve = SubResource( 11 )
script = ExtResource( 12 )

[node name="TimerSpawnOrbitales" type="Timer" parent="."]

[node name="BarraSalud" parent="." instance=ExtResource( 13 )]
margin_left = -90.0
margin_top = -390.0
margin_right = 90.0
margin_bottom = -365.0
rect_min_size = Vector2( 160, 12 )
custom_styles/fg = SubResource( 12 )
siempreVisible = true
[connection signal="body_entered" from="AreaColisionFisica" to="." method="_on_AreaColisionFisica_body_entered"]
[connection signal="screen_entered" from="VisibilityNotifier2D" to="." method="_on_VisibilityNotifier2D_screen_entered"]
[connection signal="timeout" from="TimerSpawnOrbitales" to="." method="_on_TimerSpawnOrbitales_timeout"]

[editable path="AreaAtraccion"]
